--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "prettier": "^1.18.2",
+    "prettier": "1.19.1",
     "pretty-quick": "^1.11.1"
   },
   "browserslist": {
